--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -21,7 +21,7 @@
         </ul>
       </section> -->
       <section class="col-sm-12 mr-4">
-        <i class="fa fa-fw fa-anchor"></i> Others
+        <fa-icon icon="anchor"></fa-icon> Others
         <ul class="list-unstyled">
           <li><a routerLink="/bus">Bus-Arrival</a></li>
           <li><a routerLink="/dict">Dictionary</a></li>
@@ -32,7 +32,7 @@
     </div>
   </section>
   <section class="col-sm-12 col-md-4 text-center">
-    <div>We <i class="fa fa-heart text-danger"></i> InSG</div>
+    <div>We <fa-icon icon="heart" class="text-danger"></fa-icon> InSG</div>
     <!-- <ul class="list-inline">
       <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
         <span class="sr-only" aria-label="whatsapp"></span>
@@ -53,7 +53,11 @@
     </ul> -->
     <div class="small">Copyright &copy; 2019. All rights reserved.</div>
     <div>
-      <img src="/assets/sg_round_icon.png" alt="Singapore flag" class="icon-25" />
+      <img
+        src="/assets/sg_round_icon.png"
+        alt="Singapore flag"
+        class="icon-25"
+      />
       Singapore
     </div>
   </section>
