--- a/client/src/app/gifts-home/contact/contact.component.html
+++ b/client/src/app/gifts-home/contact/contact.component.html
@@ -1,11 +1,9 @@
 <div class="container-fluid mt-5">
-  <h2>
-    <i class="fa fa-leaf"></i> Contact Me
-  </h2>
+  <h2><fa-icon icon="leaf"></fa-icon> Contact Me</h2>
   <section class="card-group text-center mt-4 mx-5">
     <mat-card class="col-sm-12 col-md-4">
       <div class="display-4 p-4">
-        <i class="fa fa-envelope"></i>
+        <fa-icon icon="envelope"></fa-icon>
       </div>
       <h4 class="pb-2">
         <a href="mailto:ying1985cly@hotmail.com">
@@ -23,21 +21,23 @@
     </mat-card>
     <mat-card class="col-sm-12 col-md-4">
       <div class="display-4 p-4">
-        <i class="fa fa-phone"></i>
+        <fa-icon icon="phone"></fa-icon>
       </div>
       <h4 class="pb-2">
         <b>+65 xxxxxxx</b>
       </h4>
     </mat-card>
   </section>
-  <h3 class="mt-5 text-center"><b>Let's get in touch, send me a message.</b></h3>
+  <h3 class="mt-5 text-center">
+    <b>Let's get in touch, send me a message.</b>
+  </h3>
   <div class="card-group mt-4">
     <mat-card class="col-sm-12 col-md-6">
       <send-message></send-message>
     </mat-card>
 
     <mat-card class="col-sm-12 col-md-6">
-      <div id="google-map" style='height:100%'></div>
+      <div id="google-map" style="height:100%"></div>
     </mat-card>
   </div>
 
