--- a/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
+++ b/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
@@ -12,10 +12,22 @@
       <button mat-button class="text-white font-weight-bold">Products</button>
     </a>
     <a routerLink="/gifts/cart">
-      <button *ngIf="cartItemCount<=0" mat-button class="text-white font-weight-bold"><i
-          calss="fa fa-shopping-cart"></i></button>
-      <button *ngIf="cartItemCount>0" mat-button class="text-white font-weight-bold" matBadge="{{cartItemCount}}"
-        matBadgeColor="accent"><i calss="fa fa-shopping-cart"></i></button>
+      <button
+        *ngIf="cartItemCount <= 0"
+        mat-button
+        class="text-white font-weight-bold"
+      >
+        <i calss="fa fa-shopping-cart">cart</i>
+      </button>
+      <button
+        *ngIf="cartItemCount > 0"
+        mat-button
+        class="text-white font-weight-bold"
+        matBadge="{{ cartItemCount }}"
+        matBadgeColor="accent"
+      >
+        <i calss="fa fa-shopping-cart">cart</i>
+      </button>
     </a>
     <a routerLink="/gifts/trackOrder">
       <button mat-button class="text-white font-weight-bold">Order</button>
@@ -24,10 +36,14 @@
       <button mat-button class="text-white font-weight-bold">Support</button>
     </a>
     <a *ngIf="!bLoginStatus" routerLink="/gifts/auth">
-      <button mat-button class="text-white font-weight-bold"><i class="fa fa-sign-in"></i></button>
+      <button mat-button class="text-white font-weight-bold">
+        <fa-icon icon="sign-in-alt"></fa-icon>
+      </button>
     </a>
     <a *ngIf="bLoginStatus">
-      <button mat-button (click)="logout()" class="text-white font-weight-bold">Logout</button>
+      <button mat-button (click)="logout()" class="text-white font-weight-bold">
+        Logout
+      </button>
     </a>
   </span>
   <span class="ml-auto d-lg-none d-xl-none">
@@ -37,10 +53,14 @@
     <mat-menu #giftsNav="matMenu">
       <a mat-menu-item routerLink="/gifts/browse">HotSales</a>
       <a mat-menu-item routerLink="/gifts/browse">Products</a>
-      <a mat-menu-item routerLink="/gifts/cart" matTooltip="Cart"><i calss="fa fa-shopping-cart"></i></a>
+      <a mat-menu-item routerLink="/gifts/cart" matTooltip="Cart"
+        ><i calss="fa fa-shopping-cart"></i
+      ></a>
       <a mat-menu-item routerLink="/gifts/trackOrder">Order</a>
       <a mat-menu-item routerLink="/gifts/auth/register">Support</a>
-      <a mat-menu-item routerLink="/gifts/auth" matTooltip="Sign in"><i class="fa fa-sign-in"></i></a>
+      <a mat-menu-item routerLink="/gifts/auth" matTooltip="Sign in"
+        ><i class="fas fa-sign-in-alt"></i
+      ></a>
     </mat-menu>
   </span>
 </mat-toolbar>
