--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -7,22 +7,27 @@
       <mat-form-field class="col-12">
         <mat-label>Username</mat-label>
         <input #uid matInput id="uid" required />
-        <span matSuffix><i class="fa fa-user m-2"></i></span>
+        <span matSuffix><fa-icon icon="user"></fa-icon></span>
       </mat-form-field>
       <mat-form-field class="col-12">
         <mat-label>Password</mat-label>
         <input #pwd matInput id="pwd" type="password" required />
-        <span matSuffix><i class="fa fa-key m-2"></i></span>
+        <span matSuffix><fa-icon icon="key"></fa-icon></span>
       </mat-form-field>
-      <mat-error class="text-center">{{errMsg}}</mat-error>
+      <mat-error class="text-center">{{ errMsg }}</mat-error>
       <div class="text-center py-3">
-        <button mat-raised-button color="primary" (click)='login(uid.value, pwd.value)'>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="login(uid.value, pwd.value)"
+        >
           Login
         </button>
       </div>
-      <span class="ml-auto">
+      <mat-divider></mat-divider>
+      <div class="text-right pt-3">
         <a color="primary" routerLink="./register">Register</a>
-      </span>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
