--- a/client/src/app/dictionary/oxford/oxford.component.html
+++ b/client/src/app/dictionary/oxford/oxford.component.html
@@ -3,17 +3,30 @@
     <mat-card>
       <mat-card-title class="mt-3 mb-4">
         <div class="col-sm-12 col-md-4">
-          <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" class="w-100" />
+          <img
+            src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png"
+            class="w-100"
+          />
         </div>
       </mat-card-title>
       <mat-card-content>
         <div class="col-sm-12 col-md-4 mb-4">
           <div class="input-group">
-            <input #oxfordInput type="text" class="form-control" (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
-              placeholder="word to check" />
+            <input
+              #oxfordInput
+              type="text"
+              class="form-control"
+              (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
+              placeholder="word to check"
+            />
             <div class="input-group-append">
-              <button class="btn btn-primary fa fa-search" type="button"
-                (click)="getOxfordDefinition(oxfordInput.value)"></button>
+              <button
+                class="btn btn-primary"
+                type="button"
+                (click)="getOxfordDefinition(oxfordInput.value)"
+              >
+                <fa-icon icon="search"></fa-icon>
+              </button>
             </div>
           </div>
         </div>
@@ -25,8 +38,14 @@
             <p>Definitions:</p>
             <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
               <b>{{ lexicalEntry?.lexicalCategory }}</b>
-              [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b>]
-              <i class="fa fa-play" (click)="playAudio(lexicalEntry?.pronunciations[0]?.audioFile)"></i>
+              [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b
+              >]
+              <fa-icon
+                icon="play"
+                (click)="
+                  playAudio((lexicalEntry?.pronunciations)[0]?.audioFile)
+                "
+              ></fa-icon>
               <ol>
                 <li *ngFor="let item of lexicalEntry.entries; let i = index">
                   {{ item }}
