--- a/client/src/app/gifts-home/about/about.component.html
+++ b/client/src/app/gifts-home/about/about.component.html
@@ -1,15 +1,15 @@
 <article class="container-fluid mt-5">
   <h2>
-    <i class="fa fa-leaf"></i>
+    <fa-icon icon="leaf"></fa-icon>
     About Me
   </h2>
   <div class="p-2">
     <b>
-      Me, having 10 years of experience for corporate gifts sales in Singapore, exploring the customer requirements and
-      satisfactions.
-      I have a heart of love and an interest in sales market, enjoying customer relationship communication and bridging
-      between
-      users and merchants. Let's keep in touch.
+      Me, having 10 years of experience for corporate gifts sales in Singapore,
+      exploring the customer requirements and satisfactions. I have a heart of
+      love and an interest in sales market, enjoying customer relationship
+      communication and bridging between users and merchants. Let's keep in
+      touch.
     </b>
   </div>
 </article>
