--- a/client/src/app/shared/categories-tree/categories-tree.component.html
+++ b/client/src/app/shared/categories-tree/categories-tree.component.html
@@ -1,13 +1,27 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
-    <button mat-button (click)="showCatalog(node.category)">{{node.name}}</button>
+  <mat-tree-node
+    *matTreeNodeDef="let node"
+    matTreeNodeToggle
+    matTreeNodePadding
+  >
+    <button mat-button (click)="showCatalog(node.category)">
+      {{ node.name }}
+    </button>
     <button mat-icon-button disabled></button>
   </mat-tree-node>
 
-  <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-    <button mat-button (click)="showCatalog(node.category)">{{node.name}}</button>
-    <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
-      <i [ngClass]="treeControl.isExpanded(node) ?'fa fa-chevron-down':'fa fa-chevron-right'"></i>
+  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
+    <button mat-button (click)="showCatalog(node.category)">
+      {{ node.name }}
+    </button>
+    <button
+      mat-icon-button
+      matTreeNodeToggle
+      [attr.aria-label]="'toggle ' + node.name"
+    >
+      <fa-icon
+        [icon]="treeControl.isExpanded(node) ? 'chevron-down' : 'chevron-right'"
+      ></fa-icon>
     </button>
   </mat-tree-node>
 </mat-tree>
