--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -3,7 +3,7 @@
   <section class="col-sm-12 col-md-8">
     <div class="d-flex justify-content-start">
       <!-- <section class="mr-4">
-        <i class="fa fa-fw fa-anchor"></i> Corporate Gifts
+        <fa-icon icon="anchor"></fa-icon> Corporate Gifts
         <ul class="list-unstyled">
           <li><a routerLink="/gifts">Gifts Home</a></li>
           <li><a routerLink="/gifts/browse">Products</a></li>
@@ -13,7 +13,7 @@
         </ul>
       </section>
       <section class="mr-4">
-        <i class="fa fa-fw fa-anchor"></i> Web Design
+        <fa-icon icon="anchor"></fa-icon> Web Design
         <ul class="list-unstyled">
           <li><a routerLink="/webdev">Home</a></li>
           <li><a routerLink="/webdev/contact">Contacts</a></li>
