--- a/client/src/app/gifts-home/contact/contact.component.html
+++ b/client/src/app/gifts-home/contact/contact.component.html
@@ -13,7 +13,7 @@
     </mat-card>
     <mat-card class="col-sm-12 col-md-4">
       <div class="display-4 p-4">
-        <i class="fa fa-map-marker"></i>
+        <fa-icon icon="map-marker"></fa-icon>
       </div>
       <h4 class="pb-2">
         <b>Bendemeer Rd, Singapore</b>
