--- a/client/src/app/web-dev/contact/contact.component.html
+++ b/client/src/app/web-dev/contact/contact.component.html
@@ -1,56 +1,59 @@
-<section class='pt-5'>
-  <div class='py-3 text-center bg-info'>
+<section class="pt-5">
+  <div class="py-3 text-center bg-info">
     <h1>
-      <i class='fa fa-fw fa-vcard-o'></i>
+      <i class="fa fa-fw fa-vcard-o"></i>
       Contact
     </h1>
   </div>
-  <div class='p-2 h5'>
-    <p>
-      <i class='fa fa-id-card'></i> : Yuan Chao (YC)
-    </p>
-    <p>
-      <i class='fa fa-envelope'></i> : yc@insg.xyz
-    </p>
-    <p>
-      <i class='fa fa-wechat'></i> WeChat : yxlych
-    </p>
-    <p>
-      <i class='fa fa-whatsapp'></i> WhatsApp : +65-87326155
-    </p>
+  <div class="p-2 h5">
+    <p><fa-icon icon="id-card-alt"></fa-icon> : Yuan Chao (YC)</p>
+    <p><fa-icon icion="envelope"></fa-icon> : yc@insg.xyz</p>
+    <p><i class="fa fa-wechat"></i> WeChat : yxlych</p>
+    <p><i class="fa fa-whatsapp"></i> WhatsApp : +65-87326155</p>
   </div>
 </section>
 
-<section class='pt-4 bg-light card shadow mx-3 px-3'>
-  <h2 class='text-center py-3'>
-    <i class='fa fa-envelope-open-o'></i>
+<section class="pt-4 bg-light card shadow mx-3 px-3">
+  <h2 class="text-center py-3">
+    <fa-icon icon="envelope-open"></fa-icon>
     Leave a Message
   </h2>
-  <div class='form-row'>
+  <div class="form-row">
     <div class="input-group col-3">
       <label class="sr-only" for="msg-name">Name:</label>
-      <input id='msg-name' class='form-control' placeholder='Name' required>
+      <input id="msg-name" class="form-control" placeholder="Name" required />
     </div>
     <div class="input-group col-3">
       <label class="sr-only" for="msg-email">Email:</label>
-      <input id='msg-email' class='form-control' placeholder='Email' required>
+      <input id="msg-email" class="form-control" placeholder="Email" required />
     </div>
     <div class="input-group col-3">
       <label class="sr-only" for="msg-mobile">Mobile:</label>
-      <input id='msg-mobile' class='form-control' placeholder='Mobile' required>
+      <input
+        id="msg-mobile"
+        class="form-control"
+        placeholder="Mobile"
+        required
+      />
     </div>
     <div class="input-group col-3">
       <label class="sr-only" for="msg-company">Company:</label>
-      <input id='msg-company' class='form-control' placeholder="Company">
+      <input id="msg-company" class="form-control" placeholder="Company" />
     </div>
   </div>
   <div class="input-group">
     <label class="sr-only" for="msg-message">Message:</label>
-    <textarea id='msg-message' class='form-control' placeholder='required' style='resize:none' required></textarea>
+    <textarea
+      id="msg-message"
+      class="form-control"
+      placeholder="required"
+      style="resize:none"
+      required
+    ></textarea>
   </div>
-  <div class='container-fluid small'>* required.</div>
+  <div class="container-fluid small">* required.</div>
   <div class="text-center p-3">
-    <b id='msg-rslt' class="d-none"></b>
+    <b id="msg-rslt" class="d-none"></b>
     <button class="btn btn-primary" id="msg-btn">Send Message</button>
   </div>
 </section>
