--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -33,24 +33,26 @@
   </section>
   <section class="col-sm-12 col-md-4 text-center">
     <div>We <fa-icon icon="heart" class="text-danger"></fa-icon> InSG</div>
-    <!-- <ul class="list-inline">
-      <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
-        <span class="sr-only" aria-label="whatsapp"></span>
-        <i class="fa fa-fw fa-whatsapp"></i>
-      </a>
-      <a routerLink="/" class="list-inline-item" matTooltip="wechat">
-        <i class="fa fa-fw fa-weixin"></i>
-      </a>
-      <a routerLink="/" class="list-inline-item" matTooltip="facebook">
-        <i class="fa fa-fw fa-facebook-official"></i>
-      </a>
-      <a routerLink="/" class="list-inline-item" matTooltip="twitter">
-        <i class="fa fa-fw fa-twitter"></i>
-      </a>
-      <a routerLink="/" class="list-inline-item" matTooltip="linkedin">
-        <i class="fa fa-fw fa-linkedin"></i>
-      </a>
-    </ul> -->
+    <div>
+      <ul class="list-inline">
+        <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
+          <span class="sr-only" aria-label="whatsapp"></span>
+          <fa-icon [icon]="['fab', 'whatsapp']"></fa-icon>
+        </a>
+        <a routerLink="/" class="list-inline-item" matTooltip="wechat">
+          <fa-icon [icon]="['fab', 'weixin']"></fa-icon>
+        </a>
+        <a routerLink="/" class="list-inline-item" matTooltip="facebook">
+          <fa-icon [icon]="['fab', 'facebook']"></fa-icon>
+        </a>
+        <a routerLink="/" class="list-inline-item" matTooltip="twitter">
+          <fa-icon [icon]="['fab', 'twitter']"></fa-icon>
+        </a>
+        <a routerLink="/" class="list-inline-item" matTooltip="linkedin">
+          <fa-icon icon="linkedin"></fa-icon>
+        </a>
+      </ul>
+    </div>
     <div class="small">Copyright &copy; 2019. All rights reserved.</div>
     <div>
       <img
