--- a/client/src/app/staffs-new-staff/home/home.component.html
+++ b/client/src/app/staffs-new-staff/home/home.component.html
@@ -4,26 +4,25 @@
   <form [formGroup]="newStaffForm" (ngSubmit)="submit()">
     <mat-form-field class="col-6">
       <mat-label>First Name</mat-label>
-      <input matInput formControlName="firstName" type="text" required>
+      <input matInput formControlName="firstName" type="text" required />
     </mat-form-field>
     <mat-form-field class="col-6">
       <mat-label>Last Name</mat-label>
-      <input matInput formControlName="lastName" type="text" required>
+      <input matInput formControlName="lastName" type="text" required />
     </mat-form-field>
     <mat-form-field class="col-6">
       <mat-label>id</mat-label>
-      <input matInput formControlName="uid" type="text" required>
+      <input matInput formControlName="uid" type="text" required />
     </mat-form-field>
     <mat-form-field class="col-6">
       <mat-label>email</mat-label>
-      <input matInput formControlName="email" type="text" required>
+      <input matInput formControlName="email" type="text" required />
     </mat-form-field>
     <mat-form-field class="col-6">
       <mat-label>password</mat-label>
-      <input matInput formControlName="pwd" type="text" required>
+      <input matInput formControlName="pwd" type="text" required />
     </mat-form-field>
 
     <button mat-button type="submit">Submit</button>
   </form>
-
 </div>
