--- a/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
+++ b/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
@@ -1,26 +1,31 @@
 <mat-toolbar color="primary" class="shadow">
   <span>
-    <button mat-button matTooltip="sidebar">
+    <button mat-icon-button matTooltip="sidebar">
       <fa-icon icon="align-justify"></fa-icon>
     </button>
   </span>
-  <span class="mr-auto">Tiptop Staffs</span>
+  <span class="mr-auto">Staffs</span>
   <span class="text-white">
     <button mat-button routerLink="/staffs/inventory">
       Inventory
     </button>
-    <button mat-button (click)="logout()" matTooltip="User Info">
+    <button mat-icon-button (click)="logout()" matTooltip="User Info">
       <fa-icon icon="info"></fa-icon>
     </button>
     <button
       *ngIf="!bLogin"
-      mat-button
+      mat-icon-button
       routerLink="/staffs/auth"
       matTooltip="Sign in"
     >
       <fa-icon icon="sign-in-alt"></fa-icon>
     </button>
-    <button *ngIf="bLogin" mat-button (click)="logout()" matTooltip="Sign out">
+    <button
+      *ngIf="bLogin"
+      mat-icon-button
+      (click)="logout()"
+      matTooltip="Sign out"
+    >
       <fa-icon icon="sign-out-alt"></fa-icon>
     </button>
   </span>
