--- a/client/src/app/web-dev/contact/contact.component.html
+++ b/client/src/app/web-dev/contact/contact.component.html
@@ -1,15 +1,15 @@
 <section class="pt-5">
   <div class="py-3 text-center bg-info">
     <h1>
-      <i class="fa fa-fw fa-vcard-o"></i>
+      <fa-icon icon="id-card-alt"></fa-icon>
       Contact
     </h1>
   </div>
   <div class="p-2 h5">
     <p><fa-icon icon="id-card-alt"></fa-icon> : Yuan Chao (YC)</p>
     <p><fa-icon icion="envelope"></fa-icon> : yc@insg.xyz</p>
-    <p><i class="fa fa-wechat"></i> WeChat : yxlych</p>
-    <p><i class="fa fa-whatsapp"></i> WhatsApp : +65-87326155</p>
+    <p><fa-icon icon="weixin"></fa-icon> WeChat : yxlych</p>
+    <p><fa-icon icon="whatsapp"></fa-icon> WhatsApp : +65-87326155</p>
   </div>
 </section>
 
