--- a/client/src/app/staffs-products/new-product/new-product.component.html
+++ b/client/src/app/staffs-products/new-product/new-product.component.html
@@ -1,35 +1,34 @@
 <div class="container">
   <h2>New Product</h2>
-
-  <form>
-    <mat-form-field>
+  <form [formGroup]="productForm" class="row" (ngSubmit)="submit()">
+    <mat-form-field class="col-4">
       <mat-label>Name</mat-label>
       <input matInput type="text" formControlName="name" required />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-4">
       <mat-label>Price</mat-label>
       <input matInput type="text" formControlName="price" required />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-4">
       <mat-label>Qty</mat-label>
       <input matInput type="text" formControlName="qty" required />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-4">
       <mat-label>Category</mat-label>
       <input matInput type="text" formControlName="category" required />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-4">
       <mat-label>Img</mat-label>
       <input matInput type="text" formControlName="img" required />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-4">
       <mat-label>Note</mat-label>
-      <input matInput type="text" formControlName="note" required />
+      <input matInput type="text" formControlName="note" />
     </mat-form-field>
 
-    <div>
-      <button mat-button color="primary" type="submit"></button>
+    <span class="col-12 text-center">{{ result }}</span>
+    <div class="col-12 text-center">
+      <button mat-button color="primary" type="submit">Submit</button>
     </div>
   </form>
-
 </div>
