--- a/client/src/app/staffs/home/home.component.html
+++ b/client/src/app/staffs/home/home.component.html
@@ -3,8 +3,12 @@
 <router-outlet></router-outlet>
 
 
-<a routerLink='/staffs'>staffs</a>
-<a routerLink='/staffs/auth'>auth</a>
-<a routerLink='/staffs/new-staff'>new-staff</a>
-<a routerLink='/staffs/products'>products</a>
-<a routerLink='/staffs/orders'>orders</a>
+<mat-nav-list dense>
+  <a mat-list-item routerLink='/staffs'>staffs</a>
+  <a mat-list-item routerLink='/staffs/inventory'>Inventory</a>
+  <a mat-list-item routerLink='/staffs/auth'>auth</a>
+  <a mat-list-item routerLink='/staffs/new-staff'>new-staff</a>
+  <a mat-list-item routerLink='/staffs/products'>products</a>
+  <a mat-list-item routerLink='/staffs/products/new'>new products</a>
+  <a mat-list-item routerLink='/staffs/orders'>orders</a>
+</mat-nav-list>
