--- a/client/src/app/dictionary/oxford/oxford.component.html
+++ b/client/src/app/dictionary/oxford/oxford.component.html
@@ -1,59 +1,45 @@
 <div class="bg-light">
-  <section class="container py-4 ">
+  <section class="container py-4">
     <mat-card>
-      <mat-card-title class="mt-3 mb-4">
-        <div class="col-sm-12 col-md-4">
-          <img
-            src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png"
-            class="w-100"
-          />
+      <mat-card-title class="mt-3 mb-4 row d-flex justify-content-center">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" class="w-100" />
         </div>
       </mat-card-title>
-      <mat-card-content>
-        <div class="col-sm-12 col-md-4 mb-4">
-          <div class="input-group">
-            <input
-              #oxfordInput
-              type="text"
-              class="form-control"
-              (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
-              placeholder="word to check"
-            />
+      <mat-card-content class="container">
+        <div class="mb-4 row d-flex justify-content-center">
+          <div class="col-sm-12 col-md-6 col-lg-4 input-group">
+            <input #oxfordInput type="text" class="form-control" (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
+              placeholder="word to check" />
             <div class="input-group-append">
-              <button
-                class="btn btn-primary"
-                type="button"
-                (click)="getOxfordDefinition(oxfordInput.value)"
-              >
+              <button class="btn btn-primary" type="button" (click)="getOxfordDefinition(oxfordInput.value)">
                 <fa-icon icon="search"></fa-icon>
               </button>
             </div>
           </div>
         </div>
-        <div *ngIf="bChecking">
-          <mat-spinner></mat-spinner>
-        </div>
-        <div *ngIf="!bChecking">
-          <div *ngIf="checkEntriesResult?.lexicalEntries?.length">
-            <p>Definitions:</p>
-            <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
-              <b>{{ lexicalEntry?.lexicalCategory }}</b>
-              [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b
-              >]
-              <fa-icon
-                icon="play"
-                (click)="
-                  playAudio((lexicalEntry?.pronunciations)[0]?.audioFile)
-                "
-              ></fa-icon>
-              <ol>
-                <li *ngFor="let item of lexicalEntry.entries; let i = index">
-                  {{ item }}
-                </li>
-              </ol>
-            </div>
+        <div>
+          <div *ngIf="bChecking">
+            <mat-spinner></mat-spinner>
           </div>
-          <mat-error *ngIf="errMsg">{{ errMsg }}</mat-error>
+          <div *ngIf="!bChecking">
+            <div *ngIf="checkEntriesResult?.lexicalEntries?.length">
+              <p>Definitions:</p>
+              <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
+                <b>{{ lexicalEntry?.lexicalCategory }}</b>
+                [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b>]
+                <fa-icon icon="play" (click)="
+                  playAudio((lexicalEntry?.pronunciations)[0]?.audioFile)
+                "></fa-icon>
+                <ol>
+                  <li *ngFor="let item of lexicalEntry.entries; let i = index">
+                    {{ item }}
+                  </li>
+                </ol>
+              </div>
+            </div>
+            <mat-error *ngIf="errMsg">{{ errMsg }}</mat-error>
+          </div>
         </div>
       </mat-card-content>
     </mat-card>
