--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -49,7 +49,7 @@
           <fa-icon [icon]="['fab', 'twitter']"></fa-icon>
         </a>
         <a routerLink="/" class="list-inline-item" matTooltip="linkedin">
-          <fa-icon icon="linkedin"></fa-icon>
+          <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
         </a>
       </ul>
     </div>
