--- a/client/src/app/bus-arrival/home/home.component.html
+++ b/client/src/app/bus-arrival/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container py-4 text-center">
+<div class="container py-4">
   <div class="text-center">
     <h1>Bus Arrival Time</h1>
     <h6>Get bus arrival time by bus stop code.</h6>
@@ -13,8 +13,13 @@
     </mat-form-field>
   </form>
   <div *ngIf="busTable.length > 0">
-    <h4>{{ busStopInfo.Description }}</h4>
-    <table mat-table [dataSource]="busTable" width="100" class="mat-elevation-z8">
+    <h4 class="text-center">{{ busStopInfo.Description }}</h4>
+    <table
+      mat-table
+      [dataSource]="busTable"
+      width="100"
+      class="mat-elevation-z8"
+    >
       <ng-container matColumnDef="service">
         <th mat-header-cell *matHeaderCellDef>Service</th>
         <td mat-cell *matCellDef="let bus">{{ bus.service }}</td>
@@ -39,6 +44,7 @@
       <tr mat-header-row *matHeaderRowDef="busTableColumn"></tr>
       <tr mat-row *matRowDef="let row; columns: busTableColumn"></tr>
     </table>
+
     <div class="small mt-1">
       Bus Load
       <ul>
@@ -49,20 +55,35 @@
     </div>
 
     <div class="text-center">
-      <button *ngIf="!bExistingBookmark" mat-flat-button color="primary" (click)="addBusStopBookmark()" class="my-3">
+      <button
+        *ngIf="!bExistingBookmark"
+        mat-flat-button
+        color="primary"
+        (click)="addBusStopBookmark()"
+        class="my-3"
+      >
         Bookmark this Bus Stop
       </button>
+      <button
+        mat-flat-button
+        color="primary"
+        (click)="getBusArrival(currentBusStopCode)"
+        class="my-3"
+      >
+        Refresh
+      </button>
     </div>
-    <button mat-flat-button color="primary" (click)="getBusArrival(currentBusStopCode)" class="my-3">
-      Refresh
-    </button>
   </div>
 
   <div *ngIf="busStopBookmark.length" class="py-4 text-center">
     <h3>Bus Stop Bookmark</h3>
     <mat-action-list *ngFor="let busStop of busStopBookmark" dense>
       <div mat-list-item>
-        <button mat-flat-button (click)="getBusArrival(busStop.BusStopCode)">
+        <button
+          mat-flat-button
+          color="primary"
+          (click)="getBusArrival(busStop.BusStopCode)"
+        >
           ({{ busStop.BusStopCode }}) {{ busStop.Description }}
         </button>
         <button (click)="deleteBusStopBookmark(busStop)">x</button>
@@ -70,22 +91,26 @@
     </mat-action-list>
   </div>
 
-  <button mat-flat-button color="primary" (click)="toggleNearbyBusStops()">
-    <b>Toggle Nearby Bus Stops</b>
-  </button>
-  <mat-spinner *ngIf="bSpinnerShowNearbyBusStops" class="small"></mat-spinner>
-  <div *ngIf="nearbyBusStops.length">
-    <mat-action-list *ngFor="let nearby of nearbyBusStops" dense>
-      <div mat-list-item>
-        <button (click)="getBusArrival(nearby.BusStopCode)">
-          ({{ nearby.BusStopCode }}) {{ nearby.Description }} @
-          {{ nearby.RoadName }}
-        </button>
-      </div>
-    </mat-action-list>
+  <div class="text-center">
+    <button mat-stroked-button color="primary" (click)="toggleNearbyBusStops()">
+      <b>Toggle Nearby Bus Stops</b>
+    </button>
+    <mat-spinner
+      *ngIf="bSpinnerShowNearbyBusStops"
+      class="ml-auto mr-auto mt-3"
+    ></mat-spinner>
+    <div *ngIf="nearbyBusStops.length">
+      <mat-action-list *ngFor="let nearby of nearbyBusStops" dense>
+        <div mat-list-item>
+          <button (click)="getBusArrival(nearby.BusStopCode)">
+            {{ nearby.Description }} @ {{ nearby.RoadName }}
+          </button>
+        </div>
+      </mat-action-list>
+    </div>
   </div>
 
-  <div class="mt-5 small">
+  <div class="mt-5 small text-center">
     Powered by <a href="https://data.gov.sg" target="_blank">Data.gov.sg</a>
   </div>
 </div>
