--- a/client/src/app/dictionary/oxford/oxford.component.html
+++ b/client/src/app/dictionary/oxford/oxford.component.html
@@ -3,43 +3,59 @@
     <mat-card>
       <mat-card-title class="mt-3 mb-4 row d-flex justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-4">
-          <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" class="w-100" />
+          <img
+            src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png"
+            class="w-100"
+          />
         </div>
       </mat-card-title>
       <mat-card-content class="container">
         <div class="mb-4 row d-flex justify-content-center">
           <div class="col-sm-12 col-md-6 col-lg-4 input-group">
-            <input #oxfordInput type="text" class="form-control" (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
-              placeholder="word to check" />
+            <input
+              #oxfordInput
+              type="text"
+              class="form-control"
+              (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
+              placeholder="word to check"
+            />
             <div class="input-group-append">
-              <button class="btn btn-primary" type="button" (click)="getOxfordDefinition(oxfordInput.value)">
+              <button
+                class="btn btn-primary"
+                type="button"
+                (click)="getOxfordDefinition(oxfordInput.value)"
+              >
                 <fa-icon icon="search"></fa-icon>
               </button>
             </div>
           </div>
         </div>
-        <div>
-          <div *ngIf="bChecking">
-            <mat-spinner></mat-spinner>
-          </div>
-          <div *ngIf="!bChecking">
-            <div *ngIf="checkEntriesResult?.lexicalEntries?.length">
-              <p>Definitions:</p>
-              <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
-                <b>{{ lexicalEntry?.lexicalCategory }}</b>
-                [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b>]
-                <fa-icon icon="play" (click)="
+        <div *ngIf="bChecking">
+          <mat-spinner class="ml-auto mr-auto"></mat-spinner>
+        </div>
+        <div *ngIf="!bChecking">
+          <div *ngIf="checkEntriesResult?.lexicalEntries?.length">
+            <p>Definitions:</p>
+            <div *ngFor="let lexicalEntry of checkEntriesResult.lexicalEntries">
+              <b>{{ lexicalEntry?.lexicalCategory }}</b>
+              [<b>{{ (lexicalEntry?.pronunciations)[0].phoneticSpelling }}</b
+              >]
+              <fa-icon
+                icon="play"
+                (click)="
                   playAudio((lexicalEntry?.pronunciations)[0]?.audioFile)
-                "></fa-icon>
-                <ol>
-                  <li *ngFor="let item of lexicalEntry.entries; let i = index">
-                    {{ item }}
-                  </li>
-                </ol>
-              </div>
+                "
+              ></fa-icon>
+              <ol>
+                <li *ngFor="let item of lexicalEntry.entries; let i = index">
+                  {{ item }}
+                </li>
+              </ol>
             </div>
-            <mat-error *ngIf="errMsg">{{ errMsg }}</mat-error>
           </div>
+        </div>
+        <div class="text-center">
+          <mat-error *ngIf="errMsg">{{ errMsg }}</mat-error>
         </div>
       </mat-card-content>
     </mat-card>
