--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -32,7 +32,7 @@
   </section>
   <section class="col-sm-12 col-md-4 text-center">
     <div>We <fa-icon icon="heart" class="text-danger"></fa-icon> InSG</div>
-    <div>
+    <!-- <div>
       <ul class="list-inline">
         <a routerLink="/" class="list-inline-item" matTooltip="whatsapp">
           <span class="sr-only" aria-label="whatsapp"></span>
@@ -51,14 +51,10 @@
           <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
         </a>
       </ul>
-    </div>
+    </div> -->
     <div class="small">Copyright &copy; 2019. All rights reserved.</div>
     <div>
-      <img
-        src="/assets/sg_round_icon.png"
-        alt="Singapore flag"
-        class="icon-25"
-      />
+      <img src="/assets/sg_round_icon.png" alt="Singapore flag" class="icon-25" />
       Singapore
     </div>
   </section>
