--- a/client/src/app/gifts-view-product/view-product.component.html
+++ b/client/src/app/gifts-view-product/view-product.component.html
@@ -26,7 +26,7 @@
         </div>
       </fieldset>
       <div class="px-3">
-        <button mat-raised-button color="primary" (click)='addToCart()'>Add to cart</button>
+        <button mat-flat-button color="primary" (click)='addToCart()'>Add to cart</button>
         <mat-error>{{rslt}}</mat-error>
       </div>
     </mat-card>
