--- a/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
+++ b/client/src/app/gifts/gifts-navbar/gifts-navbar.component.html
@@ -16,7 +16,7 @@
         <fa-icon icon="shopping-cart">cart</fa-icon>
       </button>
       <button *ngIf="cartItemCount > 0" mat-icon-button class="text-white font-weight-bold"
-        matBadge="{{ cartItemCount }}" matBadgeColor="accent">
+        matBadge="{{ cartItemCount }}" matBadgeSize="small" matBadgeColor="accent">
         <fa-icon icon="shopping-cart"></fa-icon>
       </button>
     </a>
