--- a/client/src/app/staffs/home/home.component.html
+++ b/client/src/app/staffs/home/home.component.html
@@ -3,12 +3,4 @@
 <router-outlet></router-outlet>
 
 
-<mat-nav-list dense>
-  <a mat-list-item routerLink='/staffs'>staffs</a>
-  <a mat-list-item routerLink='/staffs/inventory'>Inventory</a>
-  <a mat-list-item routerLink='/staffs/auth'>auth</a>
-  <a mat-list-item routerLink='/staffs/new-staff'>new-staff</a>
-  <a mat-list-item routerLink='/staffs/products'>products</a>
-  <a mat-list-item routerLink='/staffs/products/new'>new products</a>
-  <a mat-list-item routerLink='/staffs/orders'>orders</a>
-</mat-nav-list>
+<testing-links></testing-links>
