--- a/client/src/app/gifts-browse/browse.component.html
+++ b/client/src/app/gifts-browse/browse.component.html
@@ -9,11 +9,7 @@
           <li class="breadcrumb-item">
             <a routerLink="/gifts/browse">Home</a>
           </li>
-          <li
-            class="breadcrumb-item"
-            *ngFor="let item of categoryBreadcrumb; let i = index"
-            aria-current="page"
-          >
+          <li class="breadcrumb-item" *ngFor="let item of categoryBreadcrumb; let i = index" aria-current="page">
             <a (click)="onBreadcrumb(i)">{{ item }}</a>
           </li>
         </ol>
@@ -27,16 +23,9 @@
           <mat-spinner *ngIf="!products">Loading products.</mat-spinner>
 
           <div class="card-group">
-            <mat-card
-              *ngFor="let product of products; let ind = index"
-              class="col-sm-6 col-md-4 col-lg-3"
-            >
+            <mat-card *ngFor="let product of products; let ind = index" class="col-sm-6 col-md-4 col-lg-3">
               <a [routerLink]="['/gifts/view', { _id: product._id }]">
-                <img
-                  *ngIf="product.img && product.img.length"
-                  mat-card-image
-                  src="/assets/{{ product.img[0] }}"
-                />
+                <img *ngIf="product.img && product.img.length" mat-card-image src="/assets/{{ product.img[0] }}" />
               </a>
               <mat-card-title>{{ product.name }}</mat-card-title>
               <mat-card-subtitle>
@@ -44,23 +33,12 @@
               </mat-card-subtitle>
               <mat-card-content>
                 <mat-form-field appearance="outline" class="w-100">
-                  <input
-                    matInput
-                    type="number"
-                    step="1"
-                    min="1"
-                    [(ngModel)]="productCurrentQty[ind]"
-                  />
+                  <input matInput type="number" step="1" min="1" [(ngModel)]="productCurrentQty[ind]" />
                 </mat-form-field>
-                <button
-                  mat-raised-button
-                  color="primary"
-                  class="w-100"
-                  (click)="addToCart(ind)"
-                >
+                <button mat-flat-button color="primary" class="w-100" (click)="addToCart(ind)">
                   Add
                 </button>
-                <!-- <button mat-raised-button (click)="updateInCart(ind)">Update</button> -->
+                <!-- <button mat-flat-button (click)="updateInCart(ind)">Update</button> -->
               </mat-card-content>
             </mat-card>
           </div>
