--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,17 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 /*!
- * InSg CSS 2018
+ * InSG CSS 2019
  * yc@insg.xyz
  */
 
 body {
-  margin: 0
+  margin: 0;
 }
 
 .bg-img {
-  background-image: url("./assets/desktop.jpg");
+  background-image: url('./assets/desktop.jpg');
   background-size: 100%;
   width: 100%;
   height: 100vh;
@@ -32,7 +32,9 @@ body {
   height: auto;
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   font-weight: bold;
 }
 /* *{border: solid red 1px;} */
