separate bus to components 24nov2019

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
-<button mat-icon-button (click)="goBack()" matTooltip="Go back" class="px-3">
+<!-- <button mat-icon-button (click)="goBack()" matTooltip="Go back" class="px-3">
   <fa-icon icon="chevron-left"></fa-icon>
-</button>
+</button> -->
+<app-go-back-button></app-go-back-button>
+
 <div class="d-flex py-lg-5 justify-content-center">
   <mat-card class="col-sm-12 col-md-6 col-lg-4">
     <mat-card-title class="text-center">
