--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,6 +1,9 @@
-<button mat-icon-button (click)="cancel()" matTooltip="Go back" class="px-3">
+<!-- <button mat-icon-button (click)="cancel()" matTooltip="Go back" class="px-3">
   <fa-icon icon="chevron-left"></fa-icon>
-</button>
+</button> -->
+
+<app-go-back-button></app-go-back-button>
+
 <div class="d-flex">
   <mat-card class="container col-sm-12 col-md-8 col-lg-6 my-lg-5 py-3">
     <mat-card-title class="text-center">
