--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -22,7 +22,7 @@
       </section> -->
       <section class="col-sm-12 mr-4">
         <fa-icon icon="anchor"></fa-icon> Others
-        <ul class="list-unstyled">
+        <ul class="list-unstyled small">
           <li><a routerLink="/bus">Bus-Arrival</a></li>
           <li><a routerLink="/dict">Dictionary</a></li>
           <li><a href="https://mail.insg.xyz">Email</a></li>
