--- a/client/src/app/staffs-products/new-product/new-product.component.html
+++ b/client/src/app/staffs-products/new-product/new-product.component.html
@@ -1,6 +1,9 @@
-<button mat-icon-button (click)="goBack()" matTooltip="Go back" class="px-3">
+<!-- <button mat-icon-button (click)="goBack()" matTooltip="Go back" class="px-3">
   <fa-icon icon="chevron-left"></fa-icon>
-</button>
+</button> -->
+
+<app-go-back-button></app-go-back-button>
+
 <div class="container">
   <h2 class="py-5">New Product</h2>
   <form [formGroup]="productForm" class="row">
