--- a/client/src/app/gifts-track-order/track-order.component.html
+++ b/client/src/app/gifts-track-order/track-order.component.html
@@ -1,9 +1,9 @@
 <section class="container">
-  <h2 class="py-5">Track Order</h2>
-  <form>
-    <div>
-      <mat-label>Order No.</mat-label>
-      <div class="input-group">
+  <h2 class="text-center py-5">Track Order</h2>
+  <form class="">
+    <div class="row d-flex justify-content-center">
+      <!-- <mat-label>Order No.</mat-label> -->
+      <div class="input-group col-xs-12 col-md-6 col-lg-4">
         <input
           type="text"
           class="form-control"
