--- a/client/src/app/staffs-products/new-product/new-product.component.html
+++ b/client/src/app/staffs-products/new-product/new-product.component.html
@@ -29,9 +29,13 @@
     <span class="col-12 text-center pt-4">{{ result }}</span>
     <div class="col-12 text-center pt-3">
       <button mat-flat-button color="primary" (click)="submit()">Submit</button>
-      <button mat-raised-button color="primary" (click)="cancel()" class="ml-3">Cancel</button>
+      <button mat-raised-button color="primary" (click)="cancel()" class="ml-3">
+        Cancel
+      </button>
     </div>
     <mat-divider></mat-divider>
-    <button mat-raised-button color="primary" (click)="delete()" class="ml-3">Delete</button>
+    <button mat-raised-button color="primary" (click)="delete()" class="ml-3">
+      Delete
+    </button>
   </form>
 </div>
