--- a/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
+++ b/client/src/app/staffs/staffs-navbar/staffs-navbar.component.html
@@ -6,19 +6,31 @@
   </span>
   <span class="mr-auto">Staffs</span>
   <span class="text-white">
-    <button mat-button routerLink="/staffs/products">
-      Products
+    <button mat-button routerLink="/gifts">
+      GiftsHome
     </button>
-    <button mat-button routerLink="/staffs/inventory">
-      Inventory
+    <button
+      *ngIf="bLogin"
+      mat-icon-button
+      (click)="logout()"
+      matTooltip="Sing out"
+    >
+      <fa-icon icon="sign-out-alt"></fa-icon>
     </button>
-    <button mat-icon-button (click)="logout()" matTooltip="User Info">
-      <fa-icon icon="info"></fa-icon>
-    </button>
-    <button *ngIf="!bLogin" mat-icon-button routerLink="/staffs/auth" matTooltip="Sign in">
+    <button
+      *ngIf="!bLogin"
+      mat-icon-button
+      routerLink="/staffs/auth"
+      matTooltip="Sign in"
+    >
       <fa-icon icon="sign-in-alt"></fa-icon>
     </button>
-    <button *ngIf="bLogin" mat-icon-button (click)="logout()" matTooltip="Sign out">
+    <button
+      *ngIf="bLogin"
+      mat-icon-button
+      (click)="logout()"
+      matTooltip="Sign out"
+    >
       <fa-icon icon="sign-out-alt"></fa-icon>
     </button>
   </span>
