--- a/client/src/app/shared/go-back-button/go-back-button.component.html
+++ b/client/src/app/shared/go-back-button/go-back-button.component.html
@@ -1,3 +1,3 @@
-<button mat-icon-button (click)="goBack()" matTooltip="Go back" class="px-3">
+<button mat-icon-button (click)="goBack()" matTooltip="Go back" color="primary" class="px-3">
   <fa-icon icon="chevron-left"></fa-icon>
 </button>
