gifts -> new order

--- a/client/src/app/bus-arrival/home/home.component.html
+++ b/client/src/app/bus-arrival/home/home.component.html
@@ -35,7 +35,7 @@
       <mat-action-list *ngFor="let nearby of nearbyBusStops" dense>
         <div mat-list-item>
           <button [routerLink]="['./', nearby.BusStopCode]">
-            {{ nearby.Description }} @ {{ nearby.RoadName }}
+            ({{ nearby.BusStopCode }}) {{ nearby.Description }}
           </button>
         </div>
       </mat-action-list>
